--- a/ReactJs/Project/meals/package.json
+++ b/ReactJs/Project/meals/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "routingexample",
+  "name": "meals",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "axois": "^0.0.1-security",
+    "bootstrap": "^5.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
